# twinkl

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  Dockerfile.review_app  Dockerfile.review_app.dockerignore  GEMINI.md  README.md  ak6cpnlvbmucto3dsve6q9chmleffqrl.darc  ce9sbjjtnmdub7u9hgbaqdggrdpnatme  ck2baupggudlno5emf6dgfocttcghd7n  gm4rhf3omt1eo8khalekiutpsgdgjhfp  issue49_drift_definition_draft.md  manifest  pyproject.toml  railway.json  requirements-review-app.txt  skills-lock.json  tknra8kupja5po6ercqc8svmgnjlalmd.darc
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: launch.json
config/: schwartz_values.yaml  synthetic_data.yaml  vif.yaml
docs/: PRD.md  canonical_nouns.md  judge_validation_summary.md  prd.md
notebooks/: critic_comparison.ipynb  critic_training.ipynb  critic_training_bnn.ipynb  critic_training_bnn_embeddingablation.ipynb  critic_training_tcn.ipynb  critic_training_v2.ipynb  critic_training_v2_all-MiniLM.ipynb  critic_training_v2_nomic-embed.ipynb  embedding_ablation.ipynb  journal_gen.ipynb  journal_nudge.ipynb  judge_labeling.ipynb
prompts/: __init__.py  journal_entry.yaml  judge_active_critic_state.yaml  judge_alignment.yaml  karpathy_critic_review.md  nudge_decision.yaml  nudge_generation.yaml  nudge_response.yaml  persona_generation.yaml  weekly_digest_coach.yaml  weekly_drift_reviewer_aligned.yaml  weekly_vif_verifier.yaml
scripts/: generate_drift_notebooks.py
src/: __init__.py  drift_detector.py  drift_rules.py  weekly_drift_reviewer.py
tasks/: lessons.md  todo.md  weekly_digest.md
(+3175 files in other folders)
