[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinkl"
version = "0.1.0"
description = "Voice-first alignment journaling capstone project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==7.1.0",
    "jinja2==3.1.6",
    "openai==2.11.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "polars==1.36.1",
]

[tool.setuptools]
# This project currently has no installable Python packages.
# Explicitly disable auto-discovery so top-level folders like
# `config/` and `notebooks/` don't get treated as packages.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
